# rgb565

./: Cargo.toml  LICENSE.md  README.md  build.rs
src/: lib.rs  lut.rs  std.rs  transforms.rs
